--- a/package.json
+++ b/package.json
@@ -1,17 +1,34 @@
-{ "name": "domevents"
-, "description": "node.js eventemitter api for dom events"
-, "version": "0.0.1"
-, "homepage": "https://github.com/dodo/node-domevents"
-, "author": "dodo (https://github.com/dodo)"
-, "repository": {"type": "git", "url": "git://github.com/dodo/node-domevents.git"}
-, "main": "events.js"
-, "engines": {"node": ">= 0.4.x"}
-, "keywords": ["dom", "events", "emitter", "polyfill", "shim", "browser"]
-, "scripts": {
-    "prepublish": "cake build"}
-, "devDependencies": {
-    "browserify": ">= 1.6.1",
-    "scopify": ">= 0.2.1",
-    "muffin": ">= 0.2.6",
-    "coffee-script": ">= 1.1.3"}
+{ "name": "domevents",
+  "description": "node.js eventemitter api for dom events",
+  "version": "0.0.1",
+  "homepage": "https://github.com/dodo/node-domevents",
+  "author": "dodo (https://github.com/dodo)",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/dodo/node-domevents.git"
+  },
+  "main": "events.js",
+  "engines": {
+    "node": ">= 0.4.x"
+  },
+  "keywords": [
+    "dom",
+    "events",
+    "emitter",
+    "polyfill",
+    "shim",
+    "browser"
+  ],
+  "scripts": {
+    "browserify": "grunt"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.4",
+    "grunt-browserify": "~2.0.1",
+    "grunt-contrib-uglify": "~0.4.0",
+    "grunt-contrib-coffee": "~0.10.1",
+    "coffeeify": "~0.6.0",
+    "browserify": "~3.33.1",
+    "coffee-script": ">= 1.1.3"
+  }
 }
